--- a/Exploration POMDP/settimana-03-05.ipynb
+++ b/Exploration POMDP/settimana-03-05.ipynb
@@ -960,7 +960,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Entropy Reinforce POMDP"
+    "# Entropy Reinforce POMDP\n",
+    "mhh"
    ]
   }
  ],
